# spm-2122

./: .gitignore  README.md
assignment_0/: CMakeLists.txt
assignment_0/include/: spmutility.hpp
assignment_0/src/: main.cpp
assignment_1/: CMakeLists.txt  main.cpp
assignment_2/: CMakeLists.txt
assignment_2/src/: main1.cpp
assignment_3/: CMakeLists.txt
assignment_3/config/: assignmentconfig.h.in
assignment_3/include/: spmutility.hpp
assignment_3/src/: main.cpp
assignment_4/: CMakeLists.txt
assignment_4/include/: threadpool.hpp
assignment_4/src/: main.cpp
assignment_5/: CMakeLists.txt  README.md
assignment_5/src/: add.cpp  main.cpp
assignment_6/: CMakeLists.txt  README.md
assignment_6/config/: assignmentconfig.h.in
assignment_6/src/: main_ff1.cpp  main_ff2.cpp  main_grppi.cpp  main_omp.cpp
common/include/: spmutility.hpp  unbounded_queue.hpp
scripts/: format.py
